--- a/backprop_master.ipynb
+++ b/backprop_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,19 +188,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'C' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# forward pass, \"chunkated\" into smaller steps that are possible to backward one at a time \u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m emb \u001b[38;5;241m=\u001b[39m \u001b[43mC\u001b[49m[Xb] \u001b[38;5;66;03m# embed the characters into vectors \u001b[39;00m\n\u001b[1;32m      4\u001b[0m embcat \u001b[38;5;241m=\u001b[39m emb\u001b[38;5;241m.\u001b[39mview(emb\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m], \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m) \u001b[38;5;66;03m# concatenate the vectors \u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m# Linear layer 1 \u001b[39;00m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'C' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "tensor(3.3470, grad_fn=<NegBackward0>)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -246,9 +245,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "logprobs        | exact: True  | approximate: True  | maxdiff: 0.0\n",
+      "probs           | exact: True  | approximate: True  | maxdiff: 0.0\n",
+      "counts_sum_inv  | exact: True  | approximate: True  | maxdiff: 0.0\n",
+      "counts_sum      | exact: True  | approximate: True  | maxdiff: 0.0\n",
+      "counts          | exact: True  | approximate: True  | maxdiff: 0.0\n",
+      "norm_logits     | exact: True  | approximate: True  | maxdiff: 0.0\n",
+      "logit_maxes     | exact: True  | approximate: True  | maxdiff: 0.0\n",
+      "logits          | exact: True  | approximate: True  | maxdiff: 0.0\n",
+      "h               | exact: True  | approximate: True  | maxdiff: 0.0\n",
+      "W2              | exact: True  | approximate: True  | maxdiff: 0.0\n",
+      "b2              | exact: True  | approximate: True  | maxdiff: 0.0\n",
+      "hpreact         | exact: True  | approximate: True  | maxdiff: 0.0\n",
+      "bngain          | exact: True  | approximate: True  | maxdiff: 0.0\n",
+      "bnbias          | exact: True  | approximate: True  | maxdiff: 0.0\n",
+      "bnraw           | exact: True  | approximate: True  | maxdiff: 0.0\n",
+      "bnvar_inv       | exact: True  | approximate: True  | maxdiff: 0.0\n",
+      "bnvar           | exact: True  | approximate: True  | maxdiff: 0.0\n",
+      "bndiff2         | exact: True  | approximate: True  | maxdiff: 0.0\n",
+      "bndiff          | exact: True  | approximate: True  | maxdiff: 0.0\n",
+      "bnmeani         | exact: True  | approximate: True  | maxdiff: 0.0\n",
+      "hprebn          | exact: True  | approximate: True  | maxdiff: 0.0\n",
+      "embcat          | exact: True  | approximate: True  | maxdiff: 0.0\n",
+      "W1              | exact: True  | approximate: True  | maxdiff: 0.0\n",
+      "b1              | exact: True  | approximate: True  | maxdiff: 0.0\n",
+      "emb             | exact: True  | approximate: True  | maxdiff: 0.0\n",
+      "C               | exact: True  | approximate: True  | maxdiff: 0.0\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 1: backprop through the whole thing manually, \n",
     "# backpropagating through exactly all of the variables \n",
@@ -320,9 +352,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.3469667434692383 diff: -4.76837158203125e-07\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 2: backprop through cross_entropy but all in one go\n",
     "# to complete this challenge look at the mathematical expression of the loss,\n",
@@ -347,9 +387,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "logits          | exact: False | approximate: True  | maxdiff: 4.889443516731262e-09\n"
+     ]
+    }
+   ],
    "source": [
     "# backward pass\n",
     "\n",
@@ -362,20 +410,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(torch.Size([32, 27]), torch.Size([32]))"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "logits.shape, Yb.shape "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0.0668, 0.0839, 0.0182, 0.0515, 0.0198, 0.0870, 0.0270, 0.0367, 0.0185,\n",
+       "        0.0311, 0.0360, 0.0353, 0.0384, 0.0285, 0.0331, 0.0135, 0.0084, 0.0193,\n",
+       "        0.0148, 0.0562, 0.0537, 0.0206, 0.0260, 0.0654, 0.0613, 0.0275, 0.0216],\n",
+       "       grad_fn=<SelectBackward0>)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "F.softmax(logits, 1)(0)"
+    "F.softmax(logits, 1)[0]"
    ]
   },
   {
