--- a/backprop_master.ipynb
+++ b/backprop_master.ipynb
@@ -453,6 +453,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([ 0.0668,  0.0839,  0.0182,  0.0515,  0.0198,  0.0870,  0.0270,  0.0367,\n",
+       "        -0.9815,  0.0311,  0.0360,  0.0353,  0.0384,  0.0285,  0.0331,  0.0135,\n",
+       "         0.0084,  0.0193,  0.0148,  0.0562,  0.0537,  0.0206,  0.0260,  0.0654,\n",
+       "         0.0613,  0.0275,  0.0216], grad_fn=<MulBackward0>)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dlogits[0] * n "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
