--- a/backprop_master.ipynb
+++ b/backprop_master.ipynb
@@ -527,6 +527,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "max diff: tensor(4.7684e-07, grad_fn=<MaxBackward1>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Exercise 3: backprop through batchnorm but all in one go\n",
+    "# to complete this challenge look at the mathematical expression of the output of batchnorm,\n",
+    "# take the derivative w.r.t. its input, simplify the expression, and just write it out\n",
+    "\n",
+    "# forward pass\n",
+    "\n",
+    "# before:\n",
+    "# bnmeani = 1/n*hprebn.sum(0, keepdim=True)\n",
+    "# bndiff = hprebn - bnmeani\n",
+    "# bndiff2 = bndiff**2\n",
+    "# bnvar = 1/(n-1)*(bndiff2).sum(0, keepdim=True) # note: Bessel's correction (dividing by n-1, not n)\n",
+    "# bnvar_inv = (bnvar + 1e-5)**-0.5\n",
+    "# bnraw = bndiff * bnvar_inv\n",
+    "# hpreact = bngain * bnraw + bnbias\n",
+    "\n",
+    "# now:\n",
+    "hpreact_fast = bngain * (hprebn - hprebn.mean(0, keepdim=True)) / torch.sqrt(hprebn.var(0, keepdim=True, unbiased=True) + 1e-5) + bnbias\n",
+    "print('max diff:', (hpreact_fast - hpreact).abs().max())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
