--- a/backprop_master.ipynb
+++ b/backprop_master.ipynb
@@ -561,6 +561,41 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hprebn          | exact: False | approximate: True  | maxdiff: 9.313225746154785e-10\n"
+     ]
+    }
+   ],
+   "source": [
+    "# backward pass\n",
+    "\n",
+    "# before we had:\n",
+    "# dbnraw = bngain * dhpreact\n",
+    "# dbndiff = bnvar_inv * dbnraw\n",
+    "# dbnvar_inv = (bndiff * dbnraw).sum(0, keepdim=True)\n",
+    "# dbnvar = (-0.5*(bnvar + 1e-5)**-1.5) * dbnvar_inv\n",
+    "# dbndiff2 = (1.0/(n-1))*torch.ones_like(bndiff2) * dbnvar\n",
+    "# dbndiff += (2*bndiff) * dbndiff2\n",
+    "# dhprebn = dbndiff.clone()\n",
+    "# dbnmeani = (-dbndiff).sum(0)\n",
+    "# dhprebn += 1.0/n * (torch.ones_like(hprebn) * dbnmeani)\n",
+    "\n",
+    "# calculate dhprebn given dhpreact (i.e. backprop through the batchnorm)\n",
+    "# (you'll also need to use some of the variables from the forward pass up above)\n",
+    "\n",
+    "dhprebn = bngain*bnvar_inv/n * (n*dhpreact - dhpreact.sum(0) - n/(n-1)*bnraw*(dhpreact*bnraw).sum(0))\n",
+    "\n",
+    "cmp('hprebn', dhprebn, hprebn) # I can only get approximate to be true, my maxdiff is 9e-10"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
