--- a/backprop_master.ipynb
+++ b/backprop_master.ipynb
@@ -632,7 +632,14 @@
       "  10000/ 200000: 2.1614\n",
       "  20000/ 200000: 2.3463\n",
       "  30000/ 200000: 2.4486\n",
-      "  40000/ 200000: 1.9802\n"
+      "  40000/ 200000: 1.9802\n",
+      "  50000/ 200000: 2.3895\n",
+      "  60000/ 200000: 2.3668\n",
+      "  70000/ 200000: 2.0225\n",
+      "  80000/ 200000: 2.2750\n",
+      "  90000/ 200000: 2.1977\n",
+      " 100000/ 200000: 1.9619\n",
+      " 110000/ 200000: 2.3026\n"
      ]
     }
    ],
@@ -771,6 +778,80 @@
     "  # measure the mean/std over the entire training set\n",
     "  bnmean = hpreact.mean(0, keepdim=True)\n",
     "  bnvar = hpreact.var(0, keepdim=True, unbiased=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# evaluate train and val loss\n",
+    "\n",
+    "@torch.no_grad() # this decorator disables gradient tracking\n",
+    "def split_loss(split):\n",
+    "  x,y = {\n",
+    "    'train': (Xtr, Ytr),\n",
+    "    'val': (Xdev, Ydev),\n",
+    "    'test': (Xte, Yte),\n",
+    "  }[split]\n",
+    "  emb = C[x] # (N, block_size, n_embd)\n",
+    "  embcat = emb.view(emb.shape[0], -1) # concat into (N, block_size * n_embd)\n",
+    "  hpreact = embcat @ W1 + b1\n",
+    "  hpreact = bngain * (hpreact - bnmean) * (bnvar + 1e-5)**-0.5 + bnbias\n",
+    "  h = torch.tanh(hpreact) # (N, n_hidden)\n",
+    "  logits = h @ W2 + b2 # (N, vocab_size)\n",
+    "  loss = F.cross_entropy(logits, y)\n",
+    "  print(split, loss.item())\n",
+    "\n",
+    "split_loss('train')\n",
+    "split_loss('val')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# I achieved:\n",
+    "# train 2.0718822479248047\n",
+    "# val 2.1162495613098145"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# sample from the model\n",
+    "g = torch.Generator().manual_seed(2147483647 + 10)\n",
+    "\n",
+    "for _ in range(20):\n",
+    "    \n",
+    "    out = []\n",
+    "    context = [0] * block_size # initialize with all ...\n",
+    "    while True:\n",
+    "      # ------------\n",
+    "      # forward pass:\n",
+    "      # Embedding\n",
+    "      emb = C[torch.tensor([context])] # (1,block_size,d)      \n",
+    "      embcat = emb.view(emb.shape[0], -1) # concat into (N, block_size * n_embd)\n",
+    "      hpreact = embcat @ W1 + b1\n",
+    "      hpreact = bngain * (hpreact - bnmean) * (bnvar + 1e-5)**-0.5 + bnbias\n",
+    "      h = torch.tanh(hpreact) # (N, n_hidden)\n",
+    "      logits = h @ W2 + b2 # (N, vocab_size)\n",
+    "      # ------------\n",
+    "      # Sample\n",
+    "      probs = F.softmax(logits, dim=1)\n",
+    "      ix = torch.multinomial(probs, num_samples=1, generator=g).item()\n",
+    "      context = context[1:] + [ix]\n",
+    "      out.append(ix)\n",
+    "      if ix == 0:\n",
+    "        break\n",
+    "    \n",
+    "    print(''.join(itos[i] for i in out))"
    ]
   },
   {
