--- a/backprop_master.ipynb
+++ b/backprop_master.ipynb
@@ -790,9 +790,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train 2.0683274269104004\n",
+      "val 2.1096079349517822\n"
+     ]
+    }
+   ],
    "source": [
     "# evaluate train and val loss\n",
     "\n",
