--- a/backprop_master.ipynb
+++ b/backprop_master.ipynb
@@ -827,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -838,9 +838,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "carmahza.\n",
+      "jahleigh.\n",
+      "mri.\n",
+      "reity.\n",
+      "skael.\n",
+      "kenleine.\n",
+      "fard.\n",
+      "art.\n",
+      "kaeli.\n",
+      "nellara.\n",
+      "chaiir.\n",
+      "kaleigh.\n",
+      "ham.\n",
+      "joce.\n",
+      "quinn.\n",
+      "shoine.\n",
+      "liveni.\n",
+      "wavero.\n",
+      "dearynix.\n",
+      "kaellinsley.\n"
+     ]
+    }
+   ],
    "source": [
     "# sample from the model\n",
     "g = torch.Generator().manual_seed(2147483647 + 10)\n",
