--- a/building_wavenet.ipynb
+++ b/building_wavenet.ipynb
@@ -116,6 +116,43 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "........ --> y\n",
+      ".......y --> u\n",
+      "......yu --> h\n",
+      ".....yuh --> e\n",
+      "....yuhe --> n\n",
+      "...yuhen --> g\n",
+      "..yuheng --> .\n",
+      "........ --> d\n",
+      ".......d --> i\n",
+      "......di --> o\n",
+      ".....dio --> n\n",
+      "....dion --> d\n",
+      "...diond --> r\n",
+      "..diondr --> e\n",
+      ".diondre --> .\n",
+      "........ --> x\n",
+      ".......x --> a\n",
+      "......xa --> v\n",
+      ".....xav --> i\n",
+      "....xavi --> e\n"
+     ]
+    }
+   ],
+   "source": [
+    "for x,y in zip(Xtr[:20], Ytr[:20]):\n",
+    "  print(''.join(itos[ix.item()] for ix in x), '-->', itos[y.item()])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
