--- a/building_wavenet.ipynb
+++ b/building_wavenet.ipynb
@@ -279,6 +279,95 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "76579\n"
+     ]
+    }
+   ],
+   "source": [
+    "# original network\n",
+    "# n_embd = 10 # the dimensionality of the character embedding vectors\n",
+    "# n_hidden = 300 # the number of neurons in the hidden layer of the MLP\n",
+    "# model = Sequential([\n",
+    "#   Embedding(vocab_size, n_embd),\n",
+    "#   FlattenConsecutive(8), Linear(n_embd * 8, n_hidden, bias=False), BatchNorm1d(n_hidden), Tanh(),\n",
+    "#   Linear(n_hidden, vocab_size),\n",
+    "# ])\n",
+    "\n",
+    "# hierarchical network\n",
+    "n_embd = 24 # the dimensionality of the character embedding vectors\n",
+    "n_hidden = 128 # the number of neurons in the hidden layer of the MLP\n",
+    "model = Sequential([\n",
+    "  Embedding(vocab_size, n_embd),\n",
+    "  FlattenConsecutive(2), Linear(n_embd * 2, n_hidden, bias=False), BatchNorm1d(n_hidden), Tanh(),\n",
+    "  FlattenConsecutive(2), Linear(n_hidden*2, n_hidden, bias=False), BatchNorm1d(n_hidden), Tanh(),\n",
+    "  FlattenConsecutive(2), Linear(n_hidden*2, n_hidden, bias=False), BatchNorm1d(n_hidden), Tanh(),\n",
+    "  Linear(n_hidden, vocab_size),\n",
+    "])\n",
+    "\n",
+    "# parameter init\n",
+    "with torch.no_grad():\n",
+    "  model.layers[-1].weight *= 0.1 # last layer make less confident\n",
+    "\n",
+    "parameters = model.parameters()\n",
+    "print(sum(p.nelement() for p in parameters)) # number of parameters in total\n",
+    "for p in parameters:\n",
+    "  p.requires_grad = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      0/ 200000: 3.3167\n"
+     ]
+    }
+   ],
+   "source": [
+    "# same optimization as last time\n",
+    "max_steps = 200000\n",
+    "batch_size = 32\n",
+    "lossi = []\n",
+    "\n",
+    "for i in range(max_steps):\n",
+    "  \n",
+    "  # minibatch construct\n",
+    "  ix = torch.randint(0, Xtr.shape[0], (batch_size,))\n",
+    "  Xb, Yb = Xtr[ix], Ytr[ix] # batch X,Y\n",
+    "  \n",
+    "  # forward pass\n",
+    "  logits = model(Xb)\n",
+    "  loss = F.cross_entropy(logits, Yb) # loss function\n",
+    "  \n",
+    "  # backward pass\n",
+    "  for p in parameters:\n",
+    "    p.grad = None\n",
+    "  loss.backward()\n",
+    "  \n",
+    "  # update: simple SGD\n",
+    "  lr = 0.1 if i < 150000 else 0.01 # step learning rate decay\n",
+    "  for p in parameters:\n",
+    "    p.data += -lr * p.grad\n",
+    "\n",
+    "  # track stats\n",
+    "  if i % 10000 == 0: # print every once in a while\n",
+    "    print(f'{i:7d}/{max_steps:7d}: {loss.item():.4f}')\n",
+    "  lossi.append(loss.log10().item())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
