--- a/building_wavenet.ipynb
+++ b/building_wavenet.ipynb
@@ -428,9 +428,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train 1.7690281867980957\n",
+      "val 1.9936517477035522\n"
+     ]
+    }
+   ],
    "source": [
     "# evaluate the loss\n",
     "@torch.no_grad() # this decorator disables gradient tracking inside pytorch\n",
