--- a/building_wavenet.ipynb
+++ b/building_wavenet.ipynb
@@ -466,9 +466,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "arlij.\n",
+      "chetta.\n",
+      "heago.\n",
+      "rocklei.\n",
+      "hendrix.\n",
+      "jamylie.\n",
+      "broxin.\n",
+      "denish.\n",
+      "anslibt.\n",
+      "marianah.\n",
+      "astavia.\n",
+      "annayve.\n",
+      "aniah.\n",
+      "jayce.\n",
+      "nodiel.\n",
+      "remita.\n",
+      "niyelle.\n",
+      "jaylene.\n",
+      "aiyan.\n",
+      "aubreana.\n"
+     ]
+    }
+   ],
    "source": [
     "# sample from the model\n",
     "for _ in range(20):\n",
@@ -490,6 +517,13 @@
     "    \n",
     "    print(''.join(itos[i] for i in out)) # decode and print the generated word"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
